loopfor.LoopStairs.scala.error
Compilation error:
LoopStairs:8: error: not found: value avancement
    avancement = avancement + 1
    ^