loopfor.LoopStairs.scala.code
avance() //la première case est déjà colorée

for (c <- 1 to 8) {
  baisseBrosse()

  while (!estFaceMur()) {
    avance()
    avancement = avancement + 1
  }

  leveBrosse()
  gauche()
  avance()
  droite()
  avance()
  
}

baisseBrosse()
avance(3)